# sede

./: .gitignore  README.md
.github/workflows/: build.yml  deploy.yml  go-test.yml  mcp-server.yml
backend/: .dockerignore  Dockerfile  docker-compose.dev.yaml  go.mod  go.sum  main.go  out
backend/cmd/server/: main.go
backend/cmd/server/cmd/: root.go
backend/deploy/: docker-compose.yaml  spaces.example.yaml
backend/deploy/prod/: backend.env  public-key.txt
backend/internal/app/: app.go  app_test.go  handlers.go  handlers_test.go  router.go
backend/internal/config/: config.go  config_test.go  spaces.go  spaces_test.go
backend/internal/database/: database.go  database_test.go
backend/internal/notification/: telegram.go  telegram_test.go
backend/ui/: index.html
hardware/: docker-compose.yml  esphome.yaml
hardware/config/: pulsante-sede.yaml
mcp-server/: .dockerignore  Dockerfile  pyproject.toml  sede.py
