[project]
name = "sede-mcp-server"
version = "0.1.0"
description = "MCP server for Olografix Sede status"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.12.3",
]

[project.scripts]
sede-mcp-server = "sede:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["sede.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"